--- a/workout.html
+++ b/workout.html
@@ -7,20 +7,20 @@
 		<!-- <link rel="stylesheet" href="css/dashboardStyle.css"> -->
 	</head>
 	<body>
+		<!-- topBar -->
 		<header class="topBar">
 			<div>
 				<img src="images/activ8logo.png" />
-				<h1>Activ8</h1>
+				<h1 class="appName">Activ8</h1>
 			</div>
 			<div class="rightButts">
-				<a href="dashboard.html" class="profileButt">
-					<img src="images/userIcon.png" />
-				</a>
+				<img src="./images/settings.png" alt="" class="settings-icon" />
 				<!-- <a href="login.html" class="logoutButt">Logout</a> -->
 				<button class="logoutButt" onclick="window.location.href='index.html'">Logout</button>
 			</div>
 		</header>
 
+		<!-- navBar -->
 		<div class="navBar">
 			<a href="./dashboard.html" class="navbar-link">Dashboard</a>
 			<a href="./mealTracking.html" class="navbar-link">Track a Meal</a>
@@ -28,6 +28,67 @@
 			<a href="./community.html" class="navbar-link">Community Page</a>
 			<a href="./createPost.html" class="navbar-link">Create a Post</a>
 		</div>
+
+		<!-- popup window for settings -->
+		<div class="setting-pop-up">
+			<div class="setting-pop-up-header">
+				<img src="./images/close-btn.png" alt="" class="setting-close-btn" />
+			</div>
+			<div class="setting-pop-up-content">
+				<div class="setting-pop-up-change-username">
+					<span>Change username: </span>
+					<div>
+						<input type="text" class="setting-change-username-input" />
+						<button class="setting-change-username-confirm-btn">confirm</button>
+					</div>
+				</div>
+				<div class="setting-pop-up-change-fontsize">
+					<span>Change font size:</span>
+					<div class="setting-font-size-container">
+						<img src="./images/letter-a-2.png" alt="" class="font-size-letter font-size-letter-1" />
+						<img src="./images/letter-a-2.png" alt="" class="font-size-letter font-size-letter-2 selected" />
+						<img src="./images/letter-a-2.png" alt="" class="font-size-letter font-size-letter-3" />
+					</div>
+				</div>
+				<div class="setting-pop-up-change-color">
+					<span>Change color scheme:</span>
+					<div class="setting-color-big-container">
+						<div class="setting-color-container">
+							<div class="color-palette-option color-palette-option-default selected" data-color-option="default">
+								<img src="./images/color-palette/default.png" alt="" class="color-palette color-palette-default" />
+								<span class="color-palette-text">Default</span>
+							</div>
+							<div class="color-palette-option color-palette-option-rgblind" data-color-option="rg-blind">
+								<img src="./images/color-palette/rg-blind.png" alt="" class="color-palette color-palette-rgblind" />
+								<span class="color-palette-text">color blind friendly</span>
+							</div>
+							<div class="color-palette-option color-palette-option-dark" data-color-option="dark">
+								<img src="./images/color-palette/dark.png" alt="" class="color-palette color-palette-dark" />
+								<span class="color-palette-text">Dark theme</span>
+							</div>
+						</div>
+						<div class="info-icon-color-explanation-container">
+							<img src="./images/info.png" alt="" class="info-icon-color-explanation" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="setting-pop-up-overlay"></div>
+			<div class="setting-pop-up-top-level-message">
+				<div class="setting-pop-up-header">
+					<img src="./images/close-btn.png" alt="" class="setting-close-btn setting-second-message-close-btn" />
+				</div>
+				<div class="setting-pop-up-content">
+					* color-blind means "red/green color-blind" here<br /><br />
+					* Color selection for "color-blind friendly" option is from this website:
+					<a href="https://www.nceas.ucsb.edu/sites/default/files/2022-06/Colorblind%20Safe%20Color%20Schemes.pdf"
+						>Colorblind Safe Color Schemes</a
+					>
+				</div>
+			</div>
+		</div>
+
+		<div class="overlay" id="overlay"></div>
 
 		<div class="workoutHeading">
 			<h2>Dashboard >> Track a Workout</h2>
@@ -39,25 +100,20 @@
 				<img src="images/magnifyingGlass.png" />
 				<input type="text" id="searchInput" placeholder="Search an exercise to add to workout" />
 				<div id="exerciseSearch" class="exerciseSearch"></div>
-
 			</div>
 		</div>
 
 		<div class="outerFieldsContainer">
-		<div class="fieldsContainer">
-			<div class="leftFields">
+			<div class="fieldsContainer">
+				<div class="leftFields"></div>
+				<div class="rightFields">
+					<div class="rightExerciseContainer"></div>
+					<div class="commentContainer">
+						<label class="commentLabel">Personal Comment:</label>
+						<textarea type="text" class="commentBox" placeholder="Write your personal comment"> </textarea>
+					</div>
+				</div>
 			</div>
-			<div class = "rightFields">
-				<div class="rightExerciseContainer"> </div>
-				<div class="commentContainer">
-					<label class="commentLabel">Personal Comment:</label>
-				<textarea type = text class="commentBox" placeholder="Write your personal comment"> </textarea>
-					
-       		</div>
-			</div>
-		</div>
-
-
 		</div>
 		<button class="submitBtn" onclick="window.location.href='dashboard.html'">submit</button>
 		<!-- <img class="menuBtn" src="images/MenuButtLabelled.png" > -->
@@ -90,7 +146,6 @@
 			const exerciseSearch = document.getElementById('exerciseSearch');
 			const leftFields = document.querySelector('.leftFields');
 			const rightExerciseContainer = document.querySelector('.rightExerciseContainer'); // new reference
-
 
 			// Clear placeholder when user clicks on the box (focus)
 			exerciseInput.addEventListener('focus', () => {
@@ -153,102 +208,101 @@
 
 			//  Function to log exercises under search
 
+			let firstExerciseType = null; // Track the first exercise type added
 
-		let firstExerciseType = null; // Track the first exercise type added
+			function addExerciseBox(exerciseName, exerciseType) {
+				const wrapper = document.createElement('div');
+				wrapper.classList.add('exerciseWrapper'); // contains the box + labels
 
-		function addExerciseBox(exerciseName, exerciseType) {
-			const wrapper = document.createElement('div');
-			wrapper.classList.add('exerciseWrapper'); // contains the box + labels
+				const box = document.createElement('div');
+				box.classList.add('exerciseBox');
+				box.setAttribute('data-name', exerciseName);
 
-			const box = document.createElement('div');
-			box.classList.add('exerciseBox');
-			box.setAttribute('data-name', exerciseName);
+				const labelsContainer = document.createElement('div');
+				labelsContainer.classList.add('labelsContainer');
 
-			const labelsContainer = document.createElement('div');
-			labelsContainer.classList.add('labelsContainer');
+				const typeLower = exerciseType.toLowerCase();
 
-			const typeLower = exerciseType.toLowerCase();
-
-			// Determine column placement
-			let targetColumn;
-			if (!firstExerciseType) {
-				// First exercise added
-				firstExerciseType = typeLower;
-				targetColumn = leftFields; // first type goes to left
-			} else {
-				// If same type as first, keep in left, else go to right
-				targetColumn = (typeLower === firstExerciseType) ? leftFields : rightExerciseContainer;
-			}
-
-			if (typeLower.includes('resistance')) {
-				for (let i = 1; i <= 3; i++) {
-					const setRow = document.createElement('div');
-					setRow.classList.add('setRow');
-
-					const setLabel = document.createElement('div');
-					setLabel.classList.add('setLabel');
-					setLabel.textContent = `Set ${i}`;
-
-					const repsLabel = document.createElement('label');
-					repsLabel.textContent = 'Reps';
-					repsLabel.classList.add('inputLabel');
-
-					const repsInput = document.createElement('input');
-					repsInput.type = 'number';
-					repsInput.min = 0;
-					repsInput.placeholder = '--';
-					repsInput.classList.add('smallInput');
-
-					const weightLabel = document.createElement('label');
-					weightLabel.textContent = 'Weight';
-					weightLabel.classList.add('inputLabel');
-
-					const weightInput = document.createElement('input');
-					weightInput.type = 'number';
-					weightInput.min = 0;
-					weightInput.placeholder = '--';
-					weightInput.classList.add('smallInput');
-
-					const unitLabel = document.createElement('label');
-					unitLabel.textContent = 'kg';
-					unitLabel.classList.add('inputLabel');
-
-					setRow.appendChild(setLabel);
-					setRow.appendChild(repsLabel);
-					setRow.appendChild(repsInput);
-					setRow.appendChild(weightLabel);
-					setRow.appendChild(weightInput);
-					setRow.appendChild(unitLabel);
-
-					labelsContainer.appendChild(setRow);
+				// Determine column placement
+				let targetColumn;
+				if (!firstExerciseType) {
+					// First exercise added
+					firstExerciseType = typeLower;
+					targetColumn = leftFields; // first type goes to left
+				} else {
+					// If same type as first, keep in left, else go to right
+					targetColumn = typeLower === firstExerciseType ? leftFields : rightExerciseContainer;
 				}
-			} else if (typeLower.includes('cardio')) {
-				const labels = ['Distance (km)', 'Time (min)', 'Avg Speed (min/km)'];
-				labels.forEach((labelText) => {
-					const dataWrapper = document.createElement('div');
-					dataWrapper.classList.add('dataWrapper');
 
-					const label = document.createElement('label');
-					label.classList.add('cardioLabel');
-					label.textContent = labelText;
+				if (typeLower.includes('resistance')) {
+					for (let i = 1; i <= 3; i++) {
+						const setRow = document.createElement('div');
+						setRow.classList.add('setRow');
 
-					const cardioInput = document.createElement('input');
-					cardioInput.classList.add('cardioInput');
-					cardioInput.type = 'text';
-					cardioInput.min = 0;
-					cardioInput.placeholder = 'enter value';
+						const setLabel = document.createElement('div');
+						setLabel.classList.add('setLabel');
+						setLabel.textContent = `Set ${i}`;
 
-					dataWrapper.appendChild(label);
-					dataWrapper.appendChild(cardioInput);
+						const repsLabel = document.createElement('label');
+						repsLabel.textContent = 'Reps';
+						repsLabel.classList.add('inputLabel');
 
-					labelsContainer.appendChild(dataWrapper);
-				});
+						const repsInput = document.createElement('input');
+						repsInput.type = 'number';
+						repsInput.min = 0;
+						repsInput.placeholder = '--';
+						repsInput.classList.add('smallInput');
+
+						const weightLabel = document.createElement('label');
+						weightLabel.textContent = 'Weight';
+						weightLabel.classList.add('inputLabel');
+
+						const weightInput = document.createElement('input');
+						weightInput.type = 'number';
+						weightInput.min = 0;
+						weightInput.placeholder = '--';
+						weightInput.classList.add('smallInput');
+
+						const unitLabel = document.createElement('label');
+						unitLabel.textContent = 'kg';
+						unitLabel.classList.add('inputLabel');
+
+						setRow.appendChild(setLabel);
+						setRow.appendChild(repsLabel);
+						setRow.appendChild(repsInput);
+						setRow.appendChild(weightLabel);
+						setRow.appendChild(weightInput);
+						setRow.appendChild(unitLabel);
+
+						labelsContainer.appendChild(setRow);
+					}
+				} else if (typeLower.includes('cardio')) {
+					const labels = ['Distance (km)', 'Time (min)', 'Avg Speed (min/km)'];
+					labels.forEach((labelText) => {
+						const dataWrapper = document.createElement('div');
+						dataWrapper.classList.add('dataWrapper');
+
+						const label = document.createElement('label');
+						label.classList.add('cardioLabel');
+						label.textContent = labelText;
+
+						const cardioInput = document.createElement('input');
+						cardioInput.classList.add('cardioInput');
+						cardioInput.type = 'text';
+						cardioInput.min = 0;
+						cardioInput.placeholder = 'enter value';
+
+						dataWrapper.appendChild(label);
+						dataWrapper.appendChild(cardioInput);
+
+						labelsContainer.appendChild(dataWrapper);
+					});
+				}
+
+				wrapper.appendChild(box);
+				wrapper.appendChild(labelsContainer);
+				targetColumn.appendChild(wrapper); // append to left or right column
 			}
-
-			wrapper.appendChild(box);
-			wrapper.appendChild(labelsContainer);
-			targetColumn.appendChild(wrapper); // append to left or right column
-		}
 
 			// Hide results when clicking outside
 			document.addEventListener('click', (event) => {
@@ -262,11 +316,12 @@
 			const today = new Date();
 
 			const formattedDate = today.toLocaleDateString('en-US', {
-			year: 'numeric',
-			month: 'long',
-			day: 'numeric'
+				year: 'numeric',
+				month: 'long',
+				day: 'numeric',
 			});
-  			dateLabel.textContent = `Today's workout: ${formattedDate}`;
+			dateLabel.textContent = `Today's workout: ${formattedDate}`;
 		</script>
+		<script src="./js/navbar.js"></script>
 	</body>
 </html>
